Makes ScreenDimmer deal with the shell going away

Chrome may end up using ScreenDimmer in such a way that the ScreenDimmer is destroyed after the shell. This change makes ~ScreenDimmer deal with the shell having been destroyed so that it doesn't crash.

BUG=648723
TEST=covered by test
R=jamescook@chromium.org

Review-Url: https://codereview.chromium.org/2359633003
Cr-Commit-Position: refs/heads/master@{#419909}

Former-commit-id: 2ce4166d48b553822dda8ab5cafa0042c36729c5